[project]
name = "agentlauncher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "fastapi>=0.115.0",
    "ruff>=0.12.12",
    "uvicorn>=0.30.0",
    "openai>=1.106.1",
    "azure-identity>=1.24.0",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
